# NextChat

./: package.json
app/utils/: stream.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs  stream.rs
